# Gargoyle-LRD

./: .gitattributes  README.md
backend/: pom.xml
backend/src/main/java/com/pechariwi/gargoyle_lrd/: GargoyleLrdApplication.java
backend/src/main/java/com/pechariwi/gargoyle_lrd/config/: ApplicationConfig.java
backend/src/main/java/com/pechariwi/gargoyle_lrd/grpc/: GlrdServiceImpl.java
backend/src/main/java/com/pechariwi/gargoyle_lrd/service/: RansomwareServerService.java
backend/src/main/proto/: glrd.proto
backend/src/main/resources/: application.properties
backend/src/proto/: glrd.proto
backend/src/test/java/com/pechariwi/gargoyle_lrd/: GargoyleLrdApplicationTests.java
engine/: Cargo.toml  build.rs
engine/proto/: glrd.proto
engine/src/: cli.rs  db.rs  engine.rs  event.rs  grpc.rs  hitl.rs  listener.rs  main.rs  proc.rs  store.rs  user.rs
kernel/: detectest.c  detector.c  entro.c  entro.h  glrd_event.h  krnl.bpf.c  vmlinux.h
