[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { version = "0.13.1", features = ["tokio"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.14.5"
prost = "0.14.3"
nix = { version = "0.31.2", features = ["user"] }
anyhow = "1.0.102"
tonic-prost = "0.14.5"
aya-log = "0.2.1"
aya-ebpf = "0.1.1"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "bigdecimal"] }
sled = "0.34.7"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"

[build-dependencies]
tonic-prost-build = "0.14.5"
